bad/incr_arr_elem_bool.example_compiler_output
ERROR
[1mbad/incr_arr_elem_bool.lat:4:21: [1;31merror: [0;1m++ operator is valid only for integer values not `boolean`[m
	(new boolean[3])[1]++;
	                   [1;32m^[m
